--- a/frontend/user-management.html
+++ b/frontend/user-management.html
@@ -5,14 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>User Management | QueueEase</title>
   <link rel="stylesheet" href="css/styles.css">
+  <script src="/socket.io/socket.io.js"></script>
   <script>
+    const socket = io(); // Initialize WebSocket connection
+
+    // Function to load users and dynamically update the user and admin tables
     async function loadUsers() {
       try {
-        const response = await fetch('/api/admin/users'); // Fetch from admin API
+        const response = await fetch('/api/admin/users');
         if (!response.ok) {
           throw new Error('Failed to fetch users.');
         }
-        const users = await response.json(); // Parse JSON response
+        const users = await response.json();
 
         const usersTable = document.getElementById('usersTable');
         const adminsTable = document.getElementById('adminsTable');
@@ -57,6 +61,7 @@
       }
     }
 
+    // Function to add or update a user
     async function addUser(event) {
       event.preventDefault();
 
@@ -78,7 +83,7 @@
         if (response.ok) {
           alert('User saved successfully.');
           resetForm();
-          loadUsers();
+          socket.emit('usersUpdated'); // Notify other clients of the update
         } else {
           const result = await response.json();
           alert(result.message || 'Failed to save user.');
@@ -88,54 +93,51 @@
       }
     }
 
+    // Enable edit mode for a row
     function enableEdit(editButton) {
-  const row = editButton.closest('tr');
-  row.querySelectorAll('td[contenteditable]').forEach(cell => {
-    cell.contentEditable = 'true';
-    cell.style.backgroundColor = '#fffbe6'; // Optional: Highlight editable cells
-  });
+      const row = editButton.closest('tr');
+      row.querySelectorAll('td[contenteditable]').forEach(cell => {
+        cell.contentEditable = 'true';
+        cell.style.backgroundColor = '#fffbe6'; // Highlight editable cells
+      });
 
-  editButton.style.display = 'none'; // Hide Edit button
-  const saveButton = row.querySelector('button[onclick^="saveRow"]');
-  if (saveButton) saveButton.style.display = 'inline'; // Show Save button
-}
-
-
-async function saveRow(id, button) {
-  const row = button.closest('tr');
-  const updatedData = {
-    first_name: row.children[1].textContent.trim(),
-    last_name: row.children[2].textContent.trim(),
-    address: row.children[3].textContent.trim(),
-    zip_code: row.children[4].textContent.trim(),
-    contact_number: row.children[5].textContent.trim(),
-    email: row.children[6].textContent.trim(),
-  };
-
-  console.log('Updating user:', updatedData);
-
-  try {
-    const response = await fetch(`/api/admin/users/${id}`, {
-      method: 'PUT',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify(updatedData),
-    });
-
-    if (response.ok) {
-      alert('User updated successfully.');
-      loadUsers(); // Reload user list
-    } else {
-      const result = await response.json();
-      alert(result.message || 'Failed to update user.');
+      editButton.style.display = 'none'; // Hide Edit button
+      const saveButton = row.querySelector('button[onclick^="saveRow"]');
+      if (saveButton) saveButton.style.display = 'inline'; // Show Save button
     }
-  } catch (error) {
-    console.error('Error saving user:', error);
-  }
-}
 
+    // Save updates made to a user row
+    async function saveRow(id, button) {
+      const row = button.closest('tr');
+      const updatedData = {
+        first_name: row.children[1].textContent.trim(),
+        last_name: row.children[2].textContent.trim(),
+        address: row.children[3].textContent.trim(),
+        zip_code: row.children[4].textContent.trim(),
+        contact_number: row.children[5].textContent.trim(),
+        email: row.children[6].textContent.trim(),
+      };
 
+      try {
+        const response = await fetch(`/api/admin/users/${id}`, {
+          method: 'PUT',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(updatedData),
+        });
 
+        if (response.ok) {
+          alert('User updated successfully.');
+          socket.emit('usersUpdated'); // Notify other clients of the update
+        } else {
+          const result = await response.json();
+          alert(result.message || 'Failed to update user.');
+        }
+      } catch (error) {
+        console.error('Error saving user:', error);
+      }
+    }
 
+    // Delete a user
     async function deleteUser(id) {
       if (!confirm('Are you sure you want to delete this user?')) return;
 
@@ -144,7 +146,7 @@ async function saveRow(id, button) {
 
         if (response.ok) {
           alert('User deleted successfully.');
-          loadUsers();
+          socket.emit('usersUpdated'); // Notify other clients of the deletion
         } else {
           const result = await response.json();
           alert(result.message || 'Failed to delete user.');
@@ -154,6 +156,7 @@ async function saveRow(id, button) {
       }
     }
 
+    // Reset the form for adding a new user
     function resetForm() {
       document.getElementById('userForm').reset();
       document.querySelector('h2').innerText = 'Add/Edit User';
@@ -161,6 +164,13 @@ async function saveRow(id, button) {
       document.querySelector('#userForm').style.border = 'none';
     }
 
+    // Real-time update listener for user management
+    socket.on('usersUpdated', loadUsers);
+
+    // Auto-refresh user data every second
+    setInterval(loadUsers, 1000);
+
+    // Load users when the page is loaded
     document.addEventListener('DOMContentLoaded', loadUsers);
   </script>
 </head>
@@ -206,13 +216,6 @@ async function saveRow(id, button) {
       <label for="password">Password:</label>
       <input type="password" id="password" name="password">
     </div>
-    <div>
-      <label for="role">Role:</label>
-      <select id="role" name="role">
-        <option value="user">User</option>
-        <option value="admin">Admin</option>
-      </select>
-    </div>
     <button type="submit">Save</button>
     <button type="button" onclick="resetForm()">Cancel</button>
   </form>
@@ -231,10 +234,10 @@ async function saveRow(id, button) {
       </tr>
     </thead>
     <tbody id="adminsTable">
-      <!-- Admin rows will be dynamically generated here -->
+      <!-- Admin rows will load dynamically here -->
     </tbody>
   </table>
-  
+
   <h2>Users List</h2>
   <table border="1">
     <thead>
@@ -250,8 +253,8 @@ async function saveRow(id, button) {
       </tr>
     </thead>
     <tbody id="usersTable">
-      <!-- User rows will be dynamically generated here -->
-    </tbody>  
+      <!-- User rows will load dynamically here -->
+    </tbody>
   </table>
 </body>
 </html>
